# llvm-mlir-bishengir-complete

./: .gitattributes  .gitignore  README.md  SUMMARY.md  setup.sh
docs/: ascendnpu-ir-demo-case-guide.md  glossary.md  learning-path.md  quickstart.md  why-ascend.md
docs/ascend/: 00-Ascend-NPU硬件概述.md  01-husion-hivm-Dialect详解.md  02-一个Ascend-Pass详解.md  03-构建与调试指南.md  README.md
docs/ascendnpu-ir/: README.md
docs/llvm/: 00-环境搭建.md  01-LLVM-IR快速入门.md  02-第一个LLVM-Pass.md  03-LLVM工具箱速览.md  04-写一个会修改IR的Pass.md  05-常见Pass模式.md  06-Pass调试与测试.md  LLVM-L00-速通总览 2.md  LLVM-L01-架构与HelloWorld 2.md  LLVM-L02-类型系统与GEP 2.md  LLVM-L03-控制流与Phi节点 2.md  LLVM-L04-内置函数与属性 2.md  LLVM-L05-Pass开发.md  LLVM-L06-IR速查表 2.md  README.md
docs/mlir/: 00-从LLVM到MLIR.md  01-Toy-Tutorial导读.md  02-ascendnpu-ir快速上手.md  MLIR-L00-速通与AscendNPU-IR实战.md  MLIR-L00-速通与bishengir实战 2.md  MLIR-L00-速通与bishengir实战.md  MLIR-L01-ToyTutorial速通-Ch1-Ch2.md  MLIR-L02-ToyTutorial速通-Ch3-Ch6.md  MLIR-L03-自定义AscendNPU-IR-Pass实战.md  MLIR-L03-自定义bishengirPass实战 2.md  MLIR-L04-Standalone实战总结.md  MLIR-L05-ToyMini从零实现.md  (+6 more)
plans/: ascendnpu-ir-integration-plan.md  master-learning-plan.md  phase2-advanced-plan.md  phase3-4-detailed-design.md  phase3-4-implementation-plan.md  phase3-4-projects-design-v2.md  phase3-4-projects-design.md  phase3-4-projects-final.md  primer-plan-v2.md  primer-plan.md  remaining-fixes-plan.md  step1-2-implementation-plan.md
projects/: README.md
projects/hello-pass/: .gitignore  CMakeLists.txt  HelloPass.cpp  README.md  run.sh  test.ll
projects/mlir-hello/: .gitignore  CMakeLists.txt  README.md  hello-mlir.cpp  run.sh  test.mlir
projects/standalone-mlir/: CMakeLists.txt  Makefile  README.md
projects/standalone-mlir/include/standalone/: StandaloneDialect.h  StandaloneOps.td
projects/standalone-mlir/test/: example.mlir
projects/standalone-mlir/tools/: standalone-opt.cpp
references/: README.md  ascendnpu-ir-mapping.md
scripts/: check-docs.sh  trace-to-ascendnpu.sh
(+221 files in other folders)
